I have changed the .faq-accordian-box, added .box-box for every independant button-box, no imagination, and fixed shadows, gaps, font-size to 1rem, 14 pixels isn't readable.

--- a/css/sections/_faq.css
+++ b/css/sections/_faq.css
@@ -42,19 +42,43 @@
     }
 
     .faq-accordian-box {
-        border: 1px solid var(--color-gray-200);
-        border-radius: .5rem;
-        
         overflow: hidden;
-    }
+        border: none;
+        
+        @media (width < 768px) {
+            
+            border: .5px solid var(--color-gray-200);
+            border-radius: .5rem;
+            
+        }
+        .box-box {
+            overflow: hidden;
 
+            p {
+                font-size: 1rem;
+                padding-top: 1rem;
+                padding-left: 1rem;
+                padding-right: 1rem;
+                padding-bottom: 2rem;
+            }
+
+            @media (min-width: 768px) {
+                margin: 1rem;
+                border: 1px solid var(--color-gray-200);
+                border-radius: .8rem;
+                box-shadow: 0 3px 6px #00000013;
+    
+            }
+        }               
+    }
+    
     .faq-accordion {
         display: grid;
         grid-template-columns: 1fr 80px;
         align-items: center;
         justify-content: center;
         text-align: left;
-
+        
         height: 4rem;
         width: 100%;
         /* background-color: var(--color-white); */
@@ -68,6 +92,9 @@
         cursor: pointer;
         gap: 1rem;
         
+        @media (min-width: 768px) {
+            border: none;
+        }
         .a1, .a2, .a3, .a4, .a5, .a6 {
             padding-left: 1rem;
         }
@@ -79,7 +106,7 @@
             padding: 15px;
             justify-self: center;
             border-radius: 50%;
-
+            
             &:hover {
                 background-color: var(--color-gray-600);
             }
@@ -93,22 +120,23 @@
         transition: max-height 0.3s ease-out;
         font-size: 14px;
     }
-
+    
     .faq-m-contact {
         padding: 3rem;
         padding-top: 4rem;
-
+        
         
         .btn {
             padding: 1rem;
             width: 160px;
+            border: none;
         }
         
         @media (min-width: 768px) { display: none; }
     }
-
+    
     .faq-t-contact { display: none;
-
+        
         @media (min-width: 768px) {
             display: block;
             
@@ -126,14 +154,14 @@
                 justify-content: left;
                 padding: 1rem;
                 cursor: pointer;
-
+                
                 .contact-us {
                     display: flex;
                     gap: 1rem;
                     align-items: center;
                     font-weight: 600;
                 }
-
+                
                 .call-us-flex {
                     color: var(--color-primary);
                 }
